fix: remove overflow:hidden from footer

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -7,7 +7,6 @@
   background-color: #e3d4ff;
   color: var(--white-color);
   font-size: 1rem;
-  overflow: hidden;
 }
 
 .github__wrapper {
